@@ -30,6 +30,12 @@
 			</area>
 		</areacontainer>
     </viewelement>
+    
+    <viewelement name="time">
+		<area x="60%" y="3%" width="35%" height="10%" layer="6">
+			<drawtext align="right" font="{light}" fontsize="55%" color="{clrLightGray}" text="{dayname}   {dayleadingzero}. {monthnameshort}    {time}" />
+		</area>
+	</viewelement>
 	
 	<!-- Tokens available in info
 	{title}                 	string, Name of the element
